--- a/src/Components/styles/about.scss
+++ b/src/Components/styles/about.scss
@@ -1,6 +1,18 @@
-.about__page-title{
-  text-align: center;
-  font-size: 46px;
-  color: #111111;
+.about__page-container{
+  margin: 50px auto 0;
+  width: 70%;
 
+}
+.about__page-title{
+  font-size: 38px;
+  color: #111111;
+  letter-spacing: 1px;
+
+}
+.about__description{
+  letter-spacing: 1px;
+  color: #8f8f8f;
+  margin-top: 20px;
+  line-height: 1.7;
+  font-weight: 500;
 }
