--- a/src/Components/styles/about.scss
+++ b/src/Components/styles/about.scss
@@ -1,18 +1,23 @@
-.about__page-container{
+.about__page-container {
   margin: 50px auto 0;
   width: 70%;
-
 }
-.about__page-title{
-  font-size: 38px;
+.about__page-title {
+  font-weight: 400;
+  font-size: 42px;
   color: #111111;
-  letter-spacing: 1px;
-
+  letter-spacing: 2px;
 }
-.about__description{
+.about__description {
   letter-spacing: 1px;
   color: #8f8f8f;
   margin-top: 20px;
   line-height: 1.7;
-  font-weight: 500;
+  font-weight: 300;
+}
+
+@media (max-width: 450px) {
+  .about__page-container {
+    width: 95%;
+  }
 }
