make product page without styles

--- a/src/Components/styles/main.scss
+++ b/src/Components/styles/main.scss
@@ -216,6 +216,17 @@ ul {
   height: auto;
 }
 
+.product__page-wrapper {
+  margin-top: 50px;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+}
+
+.product__page-imgMain {
+  width: 100%;
+  height: auto;
+}
+
 @media (max-width: 900px) {
   .banner__content {
     height: 500px;
