--- a/src/Components/styles/productPage.scss
+++ b/src/Components/styles/productPage.scss
@@ -4,6 +4,10 @@
   grid-template-columns: 1fr 1fr;
 }
 
+.product__page-spetifications {
+  margin-left: 5%;
+}
+
 .product__page-imgMain {
   width: 100%;
   height: auto;
