--- a/src/Components/styles/faq.scss
+++ b/src/Components/styles/faq.scss
@@ -1,6 +1,8 @@
 .faq__main-title {
-  font-size: 48px;
   font-weight: 400;
+  font-size: 42px;
+  color: #111111;
+  letter-spacing: 2px;
 }
 .faq-title {
   color: #8f8f8f;
@@ -8,6 +10,7 @@
   font-size: 16px;
   margin-bottom: 15px;
 }
+
 .faq-description {
   font-weight: 300;
   color: #8f8f8f;
