--- a/src/Components/styles/main.scss
+++ b/src/Components/styles/main.scss
@@ -1,6 +1,9 @@
 @import "about";
 @import "productPage";
 @import "faq";
+@import "contactUs";
+@import "footer";
+@import "navMobile";
 
 body {
   font-family: "Roboto";
@@ -29,6 +32,18 @@ ul {
   margin: 0 auto;
 
   padding: 0 15px;
+}
+
+.nav-bar-active:after {
+  content: "";
+  width: 100%;
+  display: block;
+  position: absolute;
+  left: 0;
+  bottom: -3px;
+  height: 2px;
+  background-color: #111;
+  transition: width 0.2s;
 }
 
 .container {
@@ -169,9 +184,15 @@ ul {
 }
 
 .product__item-title {
+  color: #111111;
   position: relative;
   width: max-content;
 }
+
+.product__item-price {
+  color: #111111;
+}
+
 .product__item-img {
   width: 250px;
   height: auto;
@@ -208,7 +229,6 @@ ul {
 }
 
 .collage__wrapper {
-  height: 700px;
   display: flex;
   justify-content: center;
 }
@@ -218,7 +238,7 @@ ul {
   height: auto;
 
   img {
-    width: 68%;
+    width: 70%;
     height: auto;
   }
 }
@@ -228,8 +248,15 @@ ul {
 }
 
 .collage__price {
-  margin-top: 13px;
+  margin-top: 18px;
   font-weight: 400;
+}
+
+.nav__cart_ico {
+  svg {
+    width: 25px;
+    height: 30px;
+  }
 }
 
 @media (max-width: 900px) {
@@ -237,6 +264,7 @@ ul {
     height: 500px;
   }
 }
+
 @media (max-width: 450px) {
   .banner__container {
     width: 75%;
