--- a/src/Components/styles/footer.scss
+++ b/src/Components/styles/footer.scss
@@ -1,3 +1,18 @@
+footer {
+  margin-top: 100px;
+  position: relative;
+  &::before {
+    content: "";
+    width: 100%;
+    display: block;
+    position: absolute;
+    left: 0;
+    top: 1px;
+    height: 1px;
+    background-color: #ccc;
+    transition: width 0.2s;
+  }
+}
 .footer-payments {
   width: fit-content;
   margin: 20px auto;
