create cart page

--- a/src/Components/styles/productPage.scss
+++ b/src/Components/styles/productPage.scss
@@ -4,7 +4,7 @@
   grid-template-columns: 1fr 1fr;
 }
 
-.product__page-spetifications {
+.product__page-specification {
   margin-left: 5%;
 }
 
@@ -13,7 +13,7 @@
   height: auto;
 }
 
-.produdct__page-title {
+.product__page-title {
   font-weight: 400;
 }
 .product__page-price {
