--- a/src/Components/styles/cart.scss
+++ b/src/Components/styles/cart.scss
@@ -35,7 +35,16 @@
   text-align: center;
   svg {
     cursor: pointer;
-    color: #b12f2f;
+    color: #d22929;
     width: 25px;
+  }
+}
+.cart__subtotal {
+  display: flex;
+  align-items: center;
+  justify-content: flex-end;
+  margin-top: 50px;
+  h4 {
+    margin-right: 2%;
   }
 }
