--- a/src/Components/styles/cart.scss
+++ b/src/Components/styles/cart.scss
@@ -29,7 +29,7 @@
   width: 100%;
   text-align: center;
   margin-top: 30px;
-  border-bottom: 1px solid #cccccc; /* Параметры рамки */
+  border-bottom: 1px solid #cccccc;
 }
 .cart__item-basket {
   text-align: center;
