--- a/src/Components/styles/contactUs.scss
+++ b/src/Components/styles/contactUs.scss
@@ -12,3 +12,125 @@
     border-bottom: 1px solid #111111;
   }
 }
+
+/* text field */
+.text-field {
+  margin-bottom: 1rem;
+}
+
+.text-field__label {
+  display: block;
+  margin-bottom: 0.25rem;
+}
+
+.text-field__input {
+  display: block;
+  width: 100%;
+  height: calc(2.25rem + 2px);
+  padding: 0.375rem 0.75rem;
+  font-family: inherit;
+  font-size: 1rem;
+  font-weight: 400;
+  line-height: 1.5;
+  color: #212529;
+  background-color: #fff;
+  background-clip: padding-box;
+  border: 1px solid #bdbdbd;
+  border-radius: 0.25rem;
+  transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
+}
+
+.text-field__input[type="search"]::-webkit-search-decoration,
+.text-field__input[type="search"]::-webkit-search-cancel-button,
+.text-field__input[type="search"]::-webkit-search-results-button,
+.text-field__input[type="search"]::-webkit-search-results-decoration {
+  -webkit-appearance: none;
+}
+
+.text-field__input::placeholder {
+  color: #212529;
+  opacity: 0.4;
+}
+
+.text-field__input:focus {
+  color: #212529;
+  background-color: #fff;
+  border-color: #bdbdbd;
+  outline: 0;
+  box-shadow: 0 0 0 0.2rem rgba(158, 158, 158, 0.25);
+}
+
+.text-field__input:disabled,
+.text-field__input[readonly] {
+  background-color: #f5f5f5;
+  opacity: 1;
+}
+
+.text-field_floating-2 {
+  position: relative;
+}
+
+.text-field_floating-2 .text-field__input {
+  height: calc(1.5rem + 2px);
+  padding: 0.5rem 0.75rem;
+}
+
+.text-field_floating-2 .text-field__label {
+  position: absolute;
+  top: 50%;
+  left: 0.3125rem;
+  display: flex;
+  transform: translateY(-50%);
+  pointer-events: none;
+  border: none;
+  background-color: #fff;
+  color: #757575;
+  padding-left: 0.5rem;
+  padding-right: 0.5rem;
+  transition: top 0.1s ease-in-out, scale 0.1s ease-in-out;
+}
+
+.text-field_floating-2 .text-field__input::-moz-placeholder {
+  color: transparent;
+}
+
+.text-field_floating-2 .text-field__input::placeholder {
+  color: transparent;
+}
+
+.text-field_floating-2 .text-field__input:focus ~ .text-field__label,
+.text-field_floating-2
+  .text-field__input:not(:placeholder-shown)
+  ~ .text-field__label {
+  top: 0;
+  transform: translateY(-50%) scale(0.75);
+}
+.contact__input-group {
+  display: flex;
+  justify-content: space-between;
+}
+.contact__submit-btn {
+  padding: 15px 25px;
+  cursor: pointer;
+  background: #111111;
+  color: #fff;
+  width: fit-content;
+  font-size: 14px;
+  letter-spacing: 0.1rem;
+  margin-top: 30px;
+}
+.contact__area-text {
+  height: 100px !important;
+  resize: none;
+}
+.contact__area-label {
+  .label {
+    top: 18% !important;
+  }
+}
+.contact__input-wrapper {
+  width: 45%;
+}
